| Summary: | ASTERISK-25549: Confbridge: Add participant timeout option | ||
| Reporter: | Mark Michelson (mmichelson) | Labels: | |
| Date Opened: | 2015-11-13 14:16:33.000-0600 | Date Closed: | 2015-11-17 08:14:34.000-0600 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | |
| Versions: | Frequency of Occurrence | ||
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Add an user profile option that allows for a participant to automatically be ejected from a ConfBridge after a certain amount of time has elapsed. | ||
| Comments: | |||